--- a/src/components/LoadingScreen/LoadingScreen.scss
+++ b/src/components/LoadingScreen/LoadingScreen.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100%;
   background: linear-gradient(135deg, #3B0087, #1D1D1F);
   color: #EAEAEA;
 }
