Update MyGithub component: add  GitHub calendar

--- a/src/components/MyGithub/MyGithub.scss
+++ b/src/components/MyGithub/MyGithub.scss
@@ -14,6 +14,12 @@
   color: #8E2DE2; 
 }
 
+.my-github__calendar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .my-github__link {
   font-size: 1.2rem;
   color: #ffffff;
